--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
 </code></pre>
     </div>
 
-    <link rel="stylesheet" href="/js/higlightjs/style.css" />
-    <script src="/js/higlightjs/code.js"></script>
+    <link rel="stylesheet" href="js/higlightjs/style.css" />
+    <script src="js/higlightjs/code.js"></script>
     <script>hljs.highlightAll();</script>
 
 
