--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     &quot;bank&quot;: 2,
     &quot;type&quot;: &quot;visa&quot;,
     &quot;slavic&quot;: true,
-    &quot;excluded_banks&quot;: 1,
-    &quot;exeption&quot;: 1
+    &quot;excluded_banks&quot;: [5,31],
+    &quot;exeption&quot;: [4,9]
 }'
 </code></pre>
 
