--- a/index.html
+++ b/index.html
@@ -235,21 +235,39 @@
     &quot;transaction_status&quot;: &quot;success&quot;,
 }
 </code></pre>
-<p>Альтернативно: можно обсудить вариант получение списком</p>
-<pre><code class="language-json">[
-    {
-        &quot;id&quot;: 35890,
-        &quot;transaction_status&quot;: &quot;success&quot;,
-    },
-    {
-        &quot;id&quot;: 35891,
-        &quot;transaction_status&quot;: &quot;canceled&quot;,
-    },
-    {
-        &quot;id&quot;: 35892,
-        &quot;transaction_status&quot;: &quot;waiting&quot;,
-    },
-]
+<p>Альтернативно: можно получить списком</p>
+<pre><code class="language-json">{
+    "current_page": 1,
+    "data": [
+        {
+            "id": 41,
+            "amount": 9700,
+            "status": "success",
+            "accepted_at": "2022-10-21 15:33:33"
+        },
+        {
+            "id": 43,
+            "amount": 300,
+            "status": "waiting",
+            "accepted_at": null
+        },
+        {
+            "id": 52,
+            "amount": 12000,
+            "status": "success",
+            "accepted_at": "2022-10-21 14:05:15"
+        }
+    ],
+    "first_page_url": "http://api.p2p.business/api/transactions?page=1",
+    "from": 1,
+    "last_page": 34,
+    "last_page_url": "http://api.p2p.business/api/transactions?page=34",
+    "next_page_url": "http://api.p2p.business/api/transactions?page=2",
+    "path": "http://api.p2p.business/api/transactions",
+    "per_page": 100,
+    "prev_page_url": null,
+    "to": 100,
+    "total": 3371
 </code></pre>
         
 <h2>Список взятых вами карт</h2>
