--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     &quot;type&quot;: &quot;visa&quot;,
     &quot;slavic&quot;: true,
     &quot;excluded_banks&quot;: [5,31],
-    &quot;exeption&quot;: [4,9]
+    &quot;exception&quot;: [4,9]
 }'
 </code></pre>
 
@@ -151,7 +151,7 @@
         <td><small>опционально</small> массив, исключить карты перечисленных банков</td>
     </tr>
     <tr>
-        <td><code>exeption</code></td>
+        <td><code>exception</code></td>
         <td><small>опционально</small> массив, исключить карты по их id</td>
     </tr>
     
