--- a/index.html
+++ b/index.html
@@ -71,12 +71,70 @@
                 padding: 2px 5px;
                 border-radius: 4px;
             }
+            a {
+                display: inline-block;
+                color: rgb(62, 123, 192);
+                text-decoration: none;
+                border-bottom: 1px dashed #dce7fd;
+            }
+            .how_does_it_work {
+                position: relative;
+            }
+            .how_does_it_work::before {
+                content:'';
+                position: absolute;
+                left: 15px;
+                top: 60px;
+                bottom: 10px;
+                width: 1px;
+                background-color: rgb(231, 242, 248);
+            }
+            .how_does_it_work h4 span {
+                position: relative;
+                z-index: 4;
+                background-color: rgb(231, 242, 248);
+                color: rgb(62, 123, 192);
+                display: inline-flex;
+                width: 30px;
+                height: 30px;
+                border-radius: 50%;
+                text-align: center;
+                align-items: center;
+                justify-content: center;
+                margin-right: 5px;
+            }
+            .how_does_it_work p {
+                margin-left: 40px;
+                font-size: 16px;
+            }
         </style>
     </head>
     <body>
     <div class="page">
     <h1>Работа с API</h1>
 <p>Для работы с запросами по API понадобится аутентификация через Bearer Token.</p>
+
+<h2>Принципы работы системы</h2>
+
+<p>Наша система это сервис по подбору платёжных реквизитов для приёма p2p платежей. Важно понимать, это не эквайринг, мы выдаём вам реквизиты на которые ваш клиент самостоятельно производит выплату.</p>  
+
+<p>В системе присутствуют различные платёжные средства: банковские карты, счета iban и Swift, кошелки типа QIWI И так далее. Для упрощения в документации мы обобщаем их все под словом “карта”.</p>
+
+<div class="how_does_it_work">
+    <h3>Как это работает?</h3>
+
+    <h4><span>1</span>	Подбор карты или счёта</h4>
+    <p>Вы можете подобрать подходящую вам карту, например Mastercard в Грузии для приёма 1000 лари. У каждой карты есть реквизиты, дневные и месячные лимиты. После запроса нужной карты система выдаст вам до 5ти на выбор. Если данная выборка вам не подходит по каким либо причинам, вы можете сделать новый запрос исключив из него карты по id, по банку или уточнив тип карты или интересующий вас банк, для уточнения параметров подбора карты, смотрите пункт <a href="#request_params">Доступные параметры</a></p>
+    <h4><span>2</span>	Взятие карты в работу</h4>
+    <p>Для приёма платежа вы должны выбрать один из 5ти предложенных платёжных средств и взять его в работу. После этого вы сможете создавать транзакции по этой карте.</p>
+    <h4><span>3</span> Транзакции</h4>
+    <p>Внутри одной карты можно создать несколько транзакций которые сгруппируются в рамках текущей группы. Группа существует до момента возврата карты и присваивается автоматически.</p>
+    <h4><span>4</span> Пулл карт, возврат</h4>
+    <p>После того как вы получили все транзакции по карте например 2 из 2х вы должны вернуть карту в общий пулл. Или она сама будет возвращена по истечении часа после получения всех транзакций внутри текущей группы.</p> 
+    <h4><span>5</span> Блокировка карты</h4>
+    <p>Во время использования карты может прийти команда о блокировке карты от провайдера, вы должны немедленно обработать этот запрос и изъять карту из коллцентра. После отправки команды о блокировке мы не можем гарантировать вам, что транзакции по карте будут зачислены. Смотрите пункт <a href="#block_card">Уведомление о блокировке</a></p>
+</div>
+
 <h2>Аутентификация</h2>
 <p>Для получения токена нужно сделать запрос методом POST с логином и паролем вашего старшего пользователя в роли &quot;брокер&quot; на адрес: <code>https://api.p2p.business/api/auth/login</code> и в параметрах body / form-data передать логин и пароль:</p>
 <pre><code class="language-bash">curl --location --request POST 'https://api.p2p.business/api/auth/login' \
@@ -126,7 +184,7 @@
 }'
 </code></pre>
 
-<h3>Доступные параметры</h3>
+<h3 id="request_params">Доступные параметры</h3>
 
 <table>
     <tr>
@@ -295,7 +353,7 @@
 </code></pre>   
 
         
-<h2>Уведомление о блокировке</h2>
+<h2 id="block_card">Уведомление о блокировке</h2>
 <p>От вас необходимо предоставить адресс на который будет отправлено уведомление о немедленной блокировке карты.</p>        
 <p>Пример ожидаемой ссылки: <code>http://81.8.8.11/callbacks/block-card?id=666</code></p>
 <p>Так же вам будет предоставлен наш ip адрес для добавления в whitelist</p>
