--- a/index.html
+++ b/index.html
@@ -256,6 +256,13 @@
     &quot;message&quot;: &quot;This card is already in use&quot;
 }
 </code></pre>
+        
+<h3>Типы реквизитов</h3>      
+<p>Обратите внимание на поле <code>"type": "visa"</code> на его основе вам может потребоватся взять платёжные данные более чем из поля  <code>"number"</code></p>
+<p>Посмотреть все доступные типы можно по запросу /api/card-types</p>   
+<p>Если тим не относится к кредитной карте такой как visa, mastercard, mir, uzcard итд то стоит смотреть поле <code>details</code> которое часто содержит полные реквизиты для банковского перевода, чаще всего встречается когда тип iban <code>"type": "iban"</code></p>
+<p>Отдельно стоит выделить тип <code>"type": "phone"</code> в данном случае скорей всего вам попался онлайн когелёк типа Qiwi и ему подобные где переводы осуществляются по номеру телефона.</p>
+       
 
 <h2>Создание транзакции</h2>
 <p>Создаём транзакцию по карте</p>
